--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.5.10",
+    "@apollo/react-hooks": "^4.0.0",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@graphql-tools/schema": "^8.3.2",
     "@mui/icons-material": "^5.5.0",
     "@mui/lab": "^5.0.0-alpha.72",
     "@mui/material": "^5.5.0",
@@ -15,6 +18,8 @@
     "chart.js": "^3.7.1",
     "clsx": "^1.1.1",
     "date-fns": "^2.28.0",
+    "graphql": "^16.3.0",
+    "graphql-scalars": "^1.15.0",
     "history": "^5.3.0",
     "nprogress": "^0.2.0",
     "numeral": "^2.0.6",
