--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@graphql-tools/schema": "^8.3.2",
+    "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.5.0",
     "@mui/lab": "^5.0.0-alpha.72",
     "@mui/material": "^5.5.0",
@@ -21,6 +22,7 @@
     "graphql": "^16.3.0",
     "graphql-scalars": "^1.15.0",
     "history": "^5.3.0",
+    "moment": "^2.29.1",
     "nprogress": "^0.2.0",
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
@@ -29,6 +31,7 @@
     "react-custom-scrollbars-2": "^4.4.0",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.2.3",
+    "react-moment": "^1.1.1",
     "react-router": "6.0.0-beta.0",
     "react-router-dom": "6.0.0-beta.0",
     "react-scripts": "^5.0.0",
